# rss-intelligence

./: .gitignore  README.md  debug_workflow.py  main.py  project_spec.md  pyproject.toml  pytest.ini
.github/workflows/: rss_bot.yml
config/: config.ini
reports/: report.html  test_report_20260206.md  test_report_v2_20260206.md
src/: __init__.py  ai_hub.py  mailer.py  notifier.py  parser.py
tests/: conftest.py  test_ai_hub.py  test_mailer.py  test_notifier.py  test_parser.py  test_telegram_manual.py
tests/plans/: test_plan_20260206.md  test_plan_v2_20260206.md
